[metadata]
name = hashpipe
description = Regular expression match hasher
long_description = file:README.md
long_description_content_type = text/markdown
author = Ville Skyttä
author_email = ville.skytta@iki.fi
url = https://github.com/scop/hashpipe
license = Apache License 2.0
license_file = LICENSE
classifier =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Typing :: Typed
project_urls =
    Changelog = https://github.com/scop/hashpipe/blob/main/CHANGELOG.md

[options]
python_requires = >=3.3
setup_requires =
    setuptools
install_requires =
    typing;python_version<'3.5'
packages = hashpipe
scripts = bin/hashpipe
[options.extras_require]
completion =
    argcomplete
[options.package_data]
hashpipe =
    py.typed

[aliases]
test = pytest

[flake8]
# Conflicts with/handled by black
extend-ignore = D202,E203,E501
noqa-require-code = True

[isort]
profile = black

[mypy]
python_version = 3.4
strict = True
enable_error_code = ignore-without-code
disallow_any_unimported = True
#disallow_any_expr = True  # too much for now
disallow_any_decorated = True
disallow_any_explicit = True
warn_unreachable = True
[mypy-nox.*,pytest.*,_pytest.*]
# variable annotations present, errors out with python_version < 3.6
follow_imports = skip
[mypy-noxfile]
# due to above
disallow_any_decorated = False
disallow_any_unimported = False
disallow_untyped_decorators = False

[coverage:report]
exclude_lines =
    if __name__ == .__main__.:

[pylint.MAIN]
fail-on = I
load-plugins =
    pylint.extensions.check_elif,
    pylint.extensions.code_style,
    pylint.extensions.comparison_placement,
    pylint.extensions.eq_without_hash,
    pylint.extensions.for_any_all,
    pylint.extensions.no_self_use,
    pylint.extensions.overlapping_exceptions,
    pylint.extensions.private_import,
    pylint.extensions.redefined_loop_name,
persistent = no
py-version = 3.3
[pylint.MESSAGES CONTROL]
disable =
    format,  # handled by black
    wrong-import-order,  # handled by isort
enable =
    use-symbolic-message-instead,
    #useless-suppression,
[pylint.REPORTS]
score = no
